# CzumperSearch

./: CDGraph.drawio  CiGraph.drawio  Diagram bez tytułu.drawio  LICENSE  ProjectArchitecture.drawio  README.md
.github/workflows/: deploy-production-services.yml  deploy-services.yml  log-readme.yml
dataSearchService/: pom.xml
dataSearchService/src/main/resources/: application.properties
data_collection/: Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
data_collection/src/: app.py  config.py
data_collection/src/api/: jokes.py
data_collection/src/context/: joke_context_manager.py  trivia_context_manager.py
data_collection/src/exceptions/: joke_exception_factory.py  trivia_exceprion_factory.py
data_collection/src/model/: api.py  control_request.py
data_collection/src/producers/: daily_trivia_producer.py  joke_producer.py
data_collection/src/rss/: daily_trivia.py
data_collection/src/utils/: events.py  kafka_topic_manager.py  producer_manager.py
data_collection/tests/: test_app.py
data_collection/tests/api/: test_jokes.py
data_collection/tests/context/: test_joke_context_manager.py  test_trivia_context_manager.py
data_collection/tests/producers/: test_daily_trivia_producer.py  test_joke_producer.py
data_collection/tests/rss/: test_daily_trivia.py
data_collection/tests/utils/: test_producer_manager.py
data_processor/: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.test.yml  pom.xml
data_processor/src/main/resources/: application.properties
data_processor_service/: Dockerfile  docker-compose.dev.yml
data_processor_service/src/main/resources/: application.properties
data_search/: .gitignore  Dockerfile  README.md  compose.yaml  docker-compose.dev.yml  docker-compose.test.yml  pom.xml
data_search/src/main/resources/: application.properties
data_storage/: Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  wait-for-elasticsearch.sh
data_storage/src/: config.py  data_storage_service.py  elastic_handler.py  main.py
elasticsearch/: Makefile  docker-compose.yml
frontend/CzumperSearch/: Dockerfile  README.md  angular.json  config.toml  docker-compose.test.yml  docker-compose.yml  nginx.conf  package-lock.json  package.json
frontend/CzumperSearch/src/: index.html  styles.scss
frontend/CzumperSearch/src/app/: app.component.scss  app.component.spec.ts  app.component.ts  app.routes.ts
frontend/CzumperSearch/src/styles/: colors.scss
frontend/CzumperSearch/tests/: configTypes.ts  search.spec.ts
grafana/: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose-prod.yml  docker-compose.prod.yml  docker-compose.yml  fetch-secrets.sh
grafana/provisioning/dashboards/: Github-dashboard-1733343431540.json
grafana/provisioning/datasources/: datasource.yaml  datasource.yml
hashicorp/: Makefile  docker-compose.dev.yml
infrastructure/: Makefile  README.md  docker-compose.dev.yml  docker-compose.test.yml
tests/: Dockerfile  docker-compose.dev.yml  docker-compose.test.yml  e2e-search.sh
tests/frontend/: package-lock.json  package.json  tsconfig.json
tests/frontend/cypress/e2e/: search.cy.js
tests/utils/: put_data.py  remove_data.py  requirements.txt
utils/: deploy-dev.sh  deploy-test.sh  run-all-services.sh
(+74 files in other folders)
